# forecast-lab

./: .gitignore  README.md  TUTORIAL.md
.github/workflows/: ci.yml
demand-forecast/: .gitignore  README.md  pyproject.toml  query.py  report.html  results.json  results.md  results_ml.json  results_olist.json  results_quantile.json  run.py  run_accuracy.py  run_best.py  run_bike.py  run_clustering.py  run_conformal.py  run_m5.py  run_ml.py  run_newsvendor.py  run_olist.py  run_online.py  run_quantile.py  run_rossmann.py  run_trend.py  viz.py
demand-forecast/demand/: clustering.py  data.py  eval.py  features.py  gbt.py  inventory.py  models.py  olist.py
demand-forecast/docs/: EXPLAINER.md  lessons.md
demand-forecast/tests/: test_eval.py
event-forecast/: .env.example  .gitignore  AGENTS.md  Cargo.toml  PROJECT_STATUS.md  README.md  ROADMAP.md  Rocket.toml  docker-compose.yml
event-forecast/artifacts/: action-report-sample.json  replay-sample.json
event-forecast/data/: sample-events.json
event-forecast/docs/: PROJECT_RECOMMENDATION_CONTEXT.md  oss-integration-evaluation.md  product-brief.md
event-forecast/docs/archive/: decisions.md  lessons.md  prd-alerts-and-decision-rules.md  prd-configurable-location-source.md  prd-stream-replay-and-playback.md
event-forecast/docs/learning/: external-references.md  new-things.md
event-forecast/migrations/: 0001_timescale_events.sql
event-forecast/src/: alerts.rs  explorer.html  lib.rs  location.rs  main.rs  replay.rs
event-forecast/tests/: action_report_fixture.rs  evaluate_cli.rs  location_resolver.rs  replay_fixture.rs
event-forecast/tests/fixtures/: coordinate-stream.json
recsys-lab/: .gitignore  README.md  pyproject.toml  recommend.py  results.json  results.md  run.py  sweep_bpr.py
recsys-lab/docs/: lessons.md
recsys-lab/docs/learning/: metrics.md  roadmap.md
recsys-lab/docs/research/: landscape.md
recsys-lab/recsys/: data.py  eval.py  models.py  sasrec.py
recsys-lab/tests/: test_eval.py
