[project]
name = "demand-forecast"
version = "0.1.0"
description = "Demand forecasting learning lab — eval-first forecasting experiments."
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["demand"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
