[project]
name = "demand-forecast"
version = "0.1.0"
description = "Demand forecasting learning lab — eval-first forecasting experiments."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["demand"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
