[project]
name = "recsys-lab"
version = "0.1.0"
description = "Recommender systems learning lab — eval-first recsys experiments."
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
]

[project.optional-dependencies]
sasrec = [
    "torch",
]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["recsys"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
