[project]
name = "recsys-lab"
version = "0.1.0"
description = "Recommender systems learning lab — eval-first recsys experiments."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
]

[project.optional-dependencies]
sasrec = [
    "torch>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["recsys"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
